[package]
name = "yadbmt"
version = "0.1.1"
edition = "2021"
description = "A rust-based migration tool using postgres"
license = "MIT"
repository = "https://github.com/vibovenkat123/yadbmt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
sqlx = { version = "0.6.3", features = [ "runtime-async-std-native-tls", "postgres" ] }
